minor bugfixes, align blog nav, seed technologies used @ portfolios

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -70,7 +70,7 @@ h6,
 /* Nav links */
 .nav-link {
   position: relative;
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   font-weight: 500;
   color: #cdddeb;
 }
